docs(essentials): update

--- a/docs/zh-CN/essentials/i18n.md
+++ b/docs/zh-CN/essentials/i18n.md
@@ -4,7 +4,7 @@
 
 ### 语言包定义
 
-语言包由`.json`文件后缀数据组成，**以树形结构作为语言包数据 `key`**。
+语言包由`.json`文件的数据组成，**以树形结构作为语言包数据 `key`**。
 
 定义的字符串数据可以含有`%s`作为占位关键字，用于填充数据。
 
