docs(essentials): add some docs

--- a/docs/zh-CN/essentials/i18n.md
+++ b/docs/zh-CN/essentials/i18n.md
@@ -1,5 +1,13 @@
 # 国际化
 
+国际化是 `Infernus` 很重要的核心功能。即使您在开发脚本过程中不考虑，您也至少需要了解[玩家国际化](#玩家国际化)部分，否则您可能遇到乱码等常见情况。
+
+## VSCode 插件
+
+[infernus-starter](https://github.com/dockfries/infernus-starter) 中的 `.vscode/extensions.json` 提供了插件安装建议文件，十分建议您在打开 `VSCode` 的右下角的提示里点击安装，这样您可以方便的在开发时直观的查看国际化数据。
+
+`i18n-ally-custom-framework.yml`和`settings.json`已经为您设置好了该插件相关的配置文件。
+
 ## 基本示例
 
 ### 语言包定义
@@ -61,6 +69,17 @@ console.log($t("server.connection", ["127.0.0.1", "8080", "123456"]));
 console.log($t("server.connection", ["127.0.0.1", "8080", "123456"], "zh_CN"));
 ```
 
+### 实用函数
+
+**I18n** 类身上还有几个实用的**静态函数**，当您遇到国际化之间的转换时可以尝试使用。
+
+- encodeToBuf
+  - 用于将子字符串转换为指定字符集的字节数组。
+- decodeFromBuf
+  - 用于将字节数组转换为指定字符集的字符串。
+- getValidStr
+  - 截取字节数组中的有效字符串，即遇到第一个 `0`，视作字符串的结尾。
+
 ## 玩家国际化
 
 玩家实例上具有两个属性用于控制国际化，即 `charset` 和 `locale`，分别对应字符集和区域。
@@ -86,7 +105,7 @@ console.log(
 
 ## 原理
 
-:::warning 警告
+:::warning
 双向字符集数据交换都正常的前提是玩家的字符集是正确的。
 
 如果设置了错误的字符集，对于服务端和客户端而言双方得到的都是乱码。
@@ -98,7 +117,7 @@ console.log(
 
 又做了 `OnText`，`OnPlayerCommandText`，`OnDialogResponse` 等客户端到服务端侧的字符集转换处理，以保证服务端和客户端的数据交换是正确的。
 
-:::tip 提示
+::: tip
 虽然字符集转换了，但对于玩家的字符集中不含有的 `utf8` 字符，仍然会以乱码，比如`?` 的形式显示，这受限于早期的 `sa` 游戏底层代码。比如只有西方字体的字符集 `ISO-8859-1` 接收到 `emoji` 图标或中文汉字就会乱码。
 :::
 
