docs(essentials): life cycle

--- a/docs/essentials/i18n.md
+++ b/docs/essentials/i18n.md
@@ -6,7 +6,7 @@ Internationalization is a very important core function of `Infernus`. Even if yo
 
 [infernus-starter](https://github.com/dockfries/infernus-starter) provides the plugin installation recommendation file `.vscode/ extensions.json`. It is highly recommended that you click install in the prompt in the lower right corner of `VSCode`, so that you can easily and intuitively view international data during development.
 
-`i18n-ally-custom-framework.yml` and `settings.json` The configuration file related to the plug-in has been set up for you.
+`i18n-ally-custom-framework.yml` and `settings.json` The configuration file related to the plugin has been set up for you.
 
 ## Example
 
