docs(essentials): improve docs

--- a/docs/zh-CN/essentials/i18n.md
+++ b/docs/zh-CN/essentials/i18n.md
@@ -95,13 +95,13 @@ class Player {
 通常`$t`会结合玩家的区域来得到对应的语言包数据。
 
 ```ts
-// 假设你有一个player实例
+// 假设您有一个player实例
 console.log(
   $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale)
 );
 ```
 
-你要修改玩家的语言或是字符集，则应该修改玩家的 `charset` 和 `locale` 属性，请始终确保玩家的 `charset` 是正确的，你可以采用 `ip` 地址推测玩家区域，让玩家输入特定字符串然后比对字节来推算是什么字符集。
+您要修改玩家的语言或是字符集，则应该修改玩家的 `charset` 和 `locale` 属性，请始终确保玩家的 `charset` 是正确的，您可以采用 `ip` 地址推测玩家区域，让玩家输入特定字符串然后比对字节来推算是什么字符集。
 
 ## 原理
 
