docs(essentials): use and i18n

--- a/docs/essentials/i18n.md
+++ b/docs/essentials/i18n.md
@@ -103,6 +103,25 @@ console.log(
 
 If you want to modify the player's language or charset, you should modify the player's `charset` and `locale` attributes. Always make sure that the player's `charset` is correct. You can use the `ip` address to guess the player's area, and let the player enter a specific string and compare bytes to figure out what charset it is.
 
+### supportAllNickname
+
+::: tip
+By default, the game server only allows letters, numbers and underlined usernames to connect to the game.
+:::
+
+Because `omp` provides some new `api`, you can disable / enable certain characters (decimal bytes 0-255) for user names to connect to the server.
+
+The `GameMode.supportAllNickname()` **method makes use of the new api to connect all international usernames, including any characters such as Chinese characters, to the game.**
+
+```ts
+import { GameMode } from "@infernus/core";
+
+GameMode.onInit(({ next }) => {
+  GameMode.supportAllNickname();
+  return next();
+});
+```
+
 ## Principle
 
 :::warning
