--- a/docs/zh-CN/essentials/i18n.md
+++ b/docs/zh-CN/essentials/i18n.md
@@ -103,6 +103,25 @@ console.log(
 
 您要修改玩家的语言或是字符集，则应该修改玩家的 `charset` 和 `locale` 属性，请始终确保玩家的 `charset` 是正确的，您可以采用 `ip` 地址推测玩家区域，让玩家输入特定字符串然后比对字节来推算是什么字符集。
 
+### 允许国际化用户名
+
+::: tip
+默认情况下游戏服务器仅允许英文字母，数字和下划线的用户名连入游戏。
+:::
+
+由于 `omp` 提供了一些新的 `api`，可以禁用/启用某些字符(十进制字节 0-255)用户名连入服务器。
+
+`GameMode.supportAllNickname()`**方法就利用了新的 api，让所有国际化的用户名包括中文字符等任意字符的玩家用户名连入游戏。**
+
+```ts
+import { GameMode } from "@infernus/core";
+
+GameMode.onInit(({ next }) => {
+  GameMode.supportAllNickname();
+  return next();
+});
+```
+
 ## 原理
 
 :::warning
