chore(docs): spanish traduction

--- a/docs/es-ES/essentials/i18n.md
+++ b/docs/es-ES/essentials/i18n.md
@@ -40,13 +40,13 @@ La cadena de datos definida puede contener `%s` como palabra clave para rellenar
 
 ### Instancia
 
-Obtener un ejemplo de internacionalización a través de `new I18n(«default region key», «language pack»)`.
+Obtener un ejemplo de internacionalización a través de `new I18n(«clave de región por defecto», «paquete de idioma»)`.
 
 Normalmente sólo necesitamos utilizar la función `$t`.
 
-La función `$t(«clave de datos del paquete de idioma», [matriz de marcadores de posición], clave de región)` puede obtener el texto del paquete de idioma correspondiente.
+La función `$t(«clave de datos del paquete de idioma», [arreglo de marcadores de posición], clave de región)` puede obtener el texto del paquete de idioma correspondiente.
 
-En lugar de pasar una matriz de marcadores de posición, puede sustituirla por `null` o `undefined` o una matriz vacía cuando la cadena no tenga un marcador de posición.
+En lugar de pasar un arreglo de marcadores de posición, puede sustituirla por `null` o `undefined` o un arreglo vacía cuando la cadena no tenga un marcador de posición.
 
 No pasar el tercer parámetro significa obtener los datos de la configuración regional por defecto.
 
@@ -74,16 +74,15 @@ console.log($t("server.connection", ["127.0.0.1", "8080", "123456"], "zh_CN"));
 La clase `I18n` también tiene varias prácticas **funciones estáticas** que puedes probar cuando te encuentres con conversiones entre internacionalizaciones.
 
 - encodeToBuf
-  - Una matriz de bytes utilizada para convertir una subcadena a un conjunto de caracteres especificado.
+  - Un arreglo de bytes utilizada para convertir una subcadena a un conjunto de caracteres especificado.
 - decodeFromBuf
-  - Una cadena utilizada para convertir una matriz de bytes a un conjunto de caracteres especificado.
+  - Una cadena utilizada para convertir un arreglo de bytes a un conjunto de caracteres especificado.
 - getValidStr
-  - Si intercepta una cadena válida en una matriz de bytes, se encuentra el primer `0`, que se considera el final de la cadena.
+  - Si intercepta una cadena válida en un arreglo de bytes, se encuentra el primer `0`, que se considera el final de la cadena.
 
 ## Internacionalización del jugador
 
-Existen dos atributos en la instancia del jugador para controlar la internacionalización, a saber, `charset` y `locale`, que corresponden al conjunto de caracteres y a la región, respectivamente.
-Los valores por defecto son los siguientes
+Existen dos atributos en la instancia del jugador para controlar la internacionalización, a saber, `charset` y `locale`, que corresponden al conjunto de caracteres y a la región, respectivamente. Los valores por defecto son los siguientes:
 ```ts
 class Player {
   charset = "ISO-8859-1";
@@ -100,7 +99,7 @@ console.log(
 );
 ```
 
-Si desea modificar el idioma o la configuración regional del reproductor, debe modificar los atributos `charset` y `locale` del reproductor. Asegúrese siempre de que el `charset` del reproductor es correcto. Puedes utilizar la dirección `ip` para adivinar la zona del reproductor, y dejar que el jugador introduzca una cadena concreta y comparar bytes para averiguar de qué juego de caracteres se trata.
+Si desea modificar el idioma o la configuración regional del jugador, debe modificar los atributos `charset` y `locale` del jugador. Asegúrese siempre de que el `charset` del jugador es correcto. Puedes utilizar la dirección `ip` para adivinar la zona del jugador, y dejar que el mismo introduzca una cadena concreta y comparar bytes para averiguar de qué juego de caracteres se trata.
 
 ### Soportar todos los nombres
 
@@ -129,9 +128,9 @@ El intercambio bidireccional de datos de conjunto de caracteres es normal si se 
 Si se establece un conjunto de caracteres incorrecto, tanto el servidor como el cliente recibirán código confuso.
 :::
 
-En `Infernus` se utiliza `iconv-lite` para convertir el conjunto de caracteres, se utiliza `polyfill.amx` para interceptar la parte `gamemode` de la llamada de retorno que se devuelve como una matriz de bytes decimales.
+En `Infernus` se utiliza `iconv-lite` para convertir el conjunto de caracteres, se utiliza `polyfill.amx` para interceptar la parte `gamemode` de la llamada de retorno que se devuelve como un arreglo de bytes decimales.
 
-El servidor convierte el conjunto de caracteres a las funciones del lado del cliente como `SendClientMessage`, `SendClientMessageToAll`, `ShowPlayerDialog` y `CreateDynamic3DTextLabel`, es decir, los datos `utf8` se convierten en los datos del conjunto de caracteres del reproductor para garantizar que el reproductor pueda mostrar los datos con normalidad.
+El servidor convierte el conjunto de caracteres a las funciones del lado del cliente como `SendClientMessage`, `SendClientMessageToAll`, `ShowPlayerDialog` y `CreateDynamic3DTextLabel`, es decir, los datos `utf8` se convierten en los datos del conjunto de caracteres del jugador para garantizar que el jugador pueda mostrar los datos con normalidad.
 
 La conversión del juego de caracteres del cliente al servidor, como `OnText`, `OnPlayerCommandText`, `OnDialogResponse`, se ha realizado para garantizar que el intercambio de datos entre el servidor y el cliente sea correcto.
 
