chore(root): update docs, readme

--- a/docs/es-ES/essentials/i18n.md
+++ b/docs/es-ES/essentials/i18n.md
@@ -83,6 +83,7 @@ La clase `I18n` también tiene varias prácticas **funciones estáticas** que pu
 ## Internacionalización del jugador
 
 Existen dos atributos en la instancia del jugador para controlar la internacionalización, a saber, `charset` y `locale`, que corresponden al conjunto de caracteres y a la región, respectivamente. Los valores por defecto son los siguientes:
+
 ```ts
 class Player {
   charset = "ISO-8859-1";
@@ -95,7 +96,7 @@ Normalmente `$t` combina la región del jugador para obtener los datos del paque
 ```ts
 // Supongamos que tiene una instancia de jugador
 console.log(
-  $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale)
+  $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale),
 );
 ```
 
@@ -141,3 +142,25 @@ Aunque el conjunto de caracteres se haya convertido, los caracteres de `utf8` qu
 Para `Infernus`, la capa subyacente de `Infernus` siempre intercambia datos en el formato de `utf8`, porque la implementación de los dos se basa en el algoritmo existente de mapeo de archivos, que es similar al concepto de imagen sprite en el front-end, en lugar de los datos de texto reales. Algunos módulos cliente, como los parches chinos, utilizan `utf8` en la parte inferior para mostrar palabras de uso común, pero todas las fuentes `utf8` no pueden ser listadas en un mapa. Esto es muy poco razonable y, desde luego, el efecto no es tan bueno como el de los datos de texto.
 
 Para la edición definitiva de `sa`, debe implementarse internamente utilizando `utf8`. Si `omp` lanza la edición definitiva en línea en el futuro, no debería ser necesario ningún procesamiento adicional.
+
+## Terminal confuso characters
+
+Si encuentras caracteres confuen en la terminal cuando usas logger como `pino.js`, puedes probar los siguientes comandos para resolver el problema.
+
+Para los usuarios `PowerShell`, ejecute el siguiente comando (efectivo sólo para la sesión terminal actual).
+
+Si desea que este cambio sea permanente, añada el comando a su [$PROFILE](https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.core/about/about_profiles?view=powershell-7.4).
+
+```powershell
+$OutputEncoding = [Console]::InputEncoding = [Console]::OutputEncoding = New-Object System.Text.UTF8Encoding
+```
+
+Para los usuarios `cmd`, use el siguiente comando para ejecutar su servidor `omp`.
+
+```sh
+cmd /c "chcp 65001 > nul & omp-server"
+```
+
+El comando anterior cambia el juego de caracteres de `PowerShell` o `cmd` a `UTF-8`.
+
+Para otros entornos, busque soluciones por su cuenta.
