--- a/docs/essentials/i18n.md
+++ b/docs/essentials/i18n.md
@@ -97,7 +97,7 @@ Usually `$t` combines the player's region to get the corresponding language pack
 ```ts
 // Suppose you have an instance of player
 console.log(
-  $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale)
+  $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale),
 );
 ```
 
@@ -143,3 +143,25 @@ Although the charset has been converted, the characters of `utf8` that are not i
 For `Infernus`, the underlying layer of `Infernus` always exchanges data in the format of `utf8`, because the implementation of the two is based on the existing algorithm of mapping files, which is similar to the concept of sprite image in the front end, rather than the real text data. Some client modules, such as Chinese patches, use `utf8` at the bottom to display commonly used words, but all the `utf8` fonts cannot be listed in one map. This is very unreasonable and the effect is certainly not as good as that of text data.
 
 For `sa` definitive edition, it must be implemented internally using `utf8`. If `omp` launches definitive edition online in the future, no additional processing should be required.
+
+## Terminal garbled characters
+
+If you encounter garbled characters in the terminal when using logger such as `pino.js`, you can try the following commands to resolve the issue.
+
+For `PowerShell` users, execute the command below (effective only for the current terminal session).
+
+If you want this change to be permanent, add the command to your [$PROFILE](https://learn.microsoft.com/en-us/powershell/module/microsoft.powershell.core/about/about_profiles?view=powershell-7.4).
+
+```powershell
+$OutputEncoding = [Console]::InputEncoding = [Console]::OutputEncoding = New-Object System.Text.UTF8Encoding
+```
+
+For `cmd` users, use the following command to run your omp server.
+
+```sh
+cmd /c "chcp 65001 > nul & omp-server"
+```
+
+The above command changes the charset of `PowerShell` or `cmd` to `UTF-8`.
+
+For other environments, please search for solutions on your own.
