--- a/docs/zh-CN/essentials/i18n.md
+++ b/docs/zh-CN/essentials/i18n.md
@@ -97,7 +97,7 @@ class Player {
 ```ts
 // 假设您有一个player实例
 console.log(
-  $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale)
+  $t("server.incoming", ["127.0.0.1", "8080", "123456"], player.locale),
 );
 ```
 
@@ -143,3 +143,25 @@ GameMode.onInit(({ next }) => {
 对于 `GameText/TextDraw`，`Infernus` 底层始终以 `utf8` 格式作为数据交换，因为这两个的实现方式基于已有的贴图文件的算法，它类似于前端中的精灵图的概念，而不是真正意义上的文字数据。一些客户端模组比如汉化补丁，底层使用了 `utf8`，可以实现显示常用字，但不能把所有的 `utf8` 字库都列在一个贴图里，这样非常不合理，效果也肯定不如文本数据实现。
 
 对于 `sa` 重制版而言，内部一定是采用 `utf8` 实现的，如果未来的某一天 `omp` 推出了重制版的联机则应当不需要额外处理。
+
+## 终端乱码
+
+如果您在使用 `pino.js` 等日志库时，终端打印乱码，可以尝试以下方式解决。
+
+对于`PowerShell`，请执行下面的命令(仅当前终端生效)。
+
+如果你想永久生效，请将命令加入到 [$PROFILE](https://learn.microsoft.com/zh-cn/powershell/module/microsoft.powershell.core/about/about_profiles?view=powershell-7.4) 中。
+
+```powershell
+$OutputEncoding = [Console]::InputEncoding = [Console]::OutputEncoding = New-Object System.Text.UTF8Encoding
+```
+
+如果您使用的是 `cmd` ，请使用下方命令来运行 `omp` 服务器。
+
+```sh
+cmd /c "chcp 65001 > nul & omp-server"
+```
+
+上述命令会修改 `PowerShell` 或 `cmd` 的字符集为`utf8`。
+
+其他环境，请自行搜索解决方案。
