--- a/docs/zh-CN/essentials/i18n.md
+++ b/docs/zh-CN/essentials/i18n.md
@@ -150,7 +150,7 @@ GameMode.onInit(({ next }) => {
 
 对于`PowerShell`，请执行下面的命令(仅当前终端生效)。
 
-如果你想永久生效，请将命令加入到 [$PROFILE](https://learn.microsoft.com/zh-cn/powershell/module/microsoft.powershell.core/about/about_profiles?view=powershell-7.4) 中。
+如果您想永久生效，请将命令加入到 [$PROFILE](https://learn.microsoft.com/zh-cn/powershell/module/microsoft.powershell.core/about/about_profiles?view=powershell-7.4) 中。
 
 ```powershell
 $OutputEncoding = [Console]::InputEncoding = [Console]::OutputEncoding = New-Object System.Text.UTF8Encoding
